--- a/components/Snackbar/snackbar.css
+++ b/components/Snackbar/snackbar.css
@@ -60,7 +60,7 @@
   left: 1%
 }
 
-.btn {
+.snackbar_container .btn {
   padding: 0.7rem;
   background-color: var(--white-color);
   margin: 1rem;
@@ -71,7 +71,7 @@
   border-radius: 0.5rem;
 }
 
-.btn:hover {
+.snackbar_container .btn:hover {
   background-color: var(--primary-text-color);
 }
 
